# nim

./: .gitignore  CMakeLists.txt  README.md
nim/include/nim/: Application.h  nim.h  nim_Assert.h  nim_stdtypes.h
nim/src/: Application.cc  how2play.txt  main.cc  parse.hpp  tinycon.cpp
